# order-book-engine-rs

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.updated.md  TODOS.md  compose.yml
benches/: benchmark.rs
migrations/: 20230518_create_trades_table.sql  20250716190921_add_symbol_to_trades.sql  20250716194716_add_symbol_to_trades.sql
src/: api.rs  cli.rs  errors.rs  instrument.rs  lib.rs  main.rs  market_maker.rs  orderbook.rs  orders.rs  simulate.rs  state.rs  store.rs  trade.rs  utils.rs
tests/: api_tests.rs  instruments_tests.rs  ws_tests.rs
