[package]
name = "order_book-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "order_book_engine"
path="src/lib.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros", "ws"] }
clap = { version = "4.5.36", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "macros" ] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "benchmark"
harness = false
