[package]
name = "order_book_engine"
version = "0.1.0"
edition = "2024"

# You can drop this whole [lib] stanza — defaults already match:
# [lib]
# name = "order_book_engine"
# path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }

clap = { version = "4.5", features = ["derive"] }

# Keep both; you use StreamExt from futures-util
futures-util = "0.3"

rand = "0.9"
rand_distr = "0.5"

# Narrow reqwest features; enable TLS explicitly (nice for CI/release)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"

# Avoid "full"; only what you need (works for #[tokio::main]/#[tokio::test], timers, net, signal, sync)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "signal", "sync"] }

tokio-tungstenite = "0.26"
tokio-util = "0.7"

tracing = "0.1"
tracing-subscriber = "0.3"

uuid = { version = "1", features = ["v4"] }

# You only use TraceLayer; "full" is heavy
tower-http = { version = "0.6", features = ["trace"] }

parity-db = "0.5"
bincode   = "2"
base64    = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
urlencoding = "2"
hyper = "1" 
tempfile  = "3"

[[bench]]
name = "benchmark"
harness = false